# iris

./: .gitignore  README.md  pyproject.toml
examples/: 2dmm.py  3dadd.py  add_kernel.py  e2e.py  elementwise.py  end2end.py  fused_add_mul_relu.py  fusion.py  fusion_cache_printed.py  fusion_demo.py  impl_bench.py  ir_fusion.py  layer_norm.py  mat_mul.py  persistent_buffers.py  scale_add.py  scale_kernel.py  tui_demo.py  vector_add.py
management/: cli.py  methods.txt  partition_util.py
metal_runtime/: __init__.py  api.py  codegen.py  compiler.py  decorator.py  dtype.py  executor.py  fusion.py  fusion_cache.py  fusion_codegen.py  gather.py  ir.py  ir_capture.py  jit.py  launcher.py  logging.py  ops.py  parallel_compiler.py  reduction.py  runtime.py  scatter.py  test.py
metal_runtime/ops/: copy.metal  elementwise.metal  gather.metal  reduce_max.metal  reduce_min.metal  reduce_sum.metal  scatter.metal
tests/: test_api.py  test_codegen.py  test_compiler.py  test_decorator.py  test_dtypes.py  test_execution.py  test_extended_elements.py  test_fusion.py  test_fusion_cache.py  test_ir_capture.py  test_launcher.py  test_logging.py  test_ops.py  test_parallel_compiler.py  test_runtime.py  test_sgr_ops.py
tui/: Cargo.toml
tui/src/: main.rs
