[project]
name = "iris"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.4",
    "pyobjc-framework-metal>=11.1",
    "pyobjc-framework-metalkit>=11.1",
    "pyobjc-framework-metalperformanceshaders>=11.1",
    "pytest>=8.4.2",
    "typing>=3.10.0.0",
]
